# minidock

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
assets/: .gitkeep
minidock/: __main__.py  cli.py  engine.py  manager.py
